--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     {{content-for 'head'}}
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="assets/adminlte/AdminLTE.css">
+    <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
 
 
     {{content-for 'head-footer'}}
