--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     {{content-for 'head'}}
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="assets/adminlte/AdminLTE.css">
+    <link rel="stylesheet" href="assets/adminlte/skins/_all-skins.css">
     <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
 
 
@@ -20,6 +21,7 @@
 
     <script src="assets/vendor.js"></script>
     <script src="assets/valnetfront.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.js"></script>
 
     {{content-for 'body-footer'}}
   </body>
