--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="assets/adminlte/AdminLTE.css">
     <link rel="stylesheet" href="assets/adminlte/skins/_all-skins.css">
     <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/bootstrap-datepicker/css/bootstrap-datepicker.css">
 
 
     {{content-for 'head-footer'}}
@@ -22,7 +23,8 @@
     <script src="assets/vendor.js"></script>
     <script src="assets/valnetfront.js"></script>
     <script src="assets/bootstrap/js/bootstrap.js"></script>
-
+    <script src="assets/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
+    <script src="assets/bootstrap-datepicker/locales/bootstrap-datepicker.fr.min.js"></script>
     {{content-for 'body-footer'}}
   </body>
 </html>
